Add check for stdint.h, since the timing module uses this.
svn path=/trunk/libshout/; revision=2209

--- a/configure.in
+++ b/configure.in
@@ -53,6 +53,8 @@ dnl Checks for libraries.
 dnl Checks for header files.
 AC_HEADER_STDC
 
+AC_CHECK_HEADER(stdint.h, AC_DEFINE(HAVE_STDINT_H, 1),,)
+
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 
