Make automake happy
svn path=/trunk/libshout/; revision=4209

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,16 +6,12 @@ SUBDIRS = include src examples
 
 EXTRA_DIST = README COPYING
 
-#install-data-local:
-#	mkdir -p $(DESTDIR)$(includedir)/shout
-	#mkdir -p $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
-	#$(INSTALL) -m 0644 README AUTHORS COPYING CHANGES $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)
-	#$(INSTALL) -m 0644 example/Makefile example/example.c $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
-	#$(INSTALL) -m 0644 shout.h $(DESTDIR)$(includedir)/shout
-
-
-# SCCS stuff (for BitKeeper)
-GET = true
+##install-data-local:
+	##mkdir -p $(DESTDIR)$(includedir)/shout
+	##mkdir -p $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
+	##$(INSTALL) -m 0644 README AUTHORS COPYING CHANGES $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)
+	##$(INSTALL) -m 0644 example/Makefile example/example.c $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
+	##$(INSTALL) -m 0644 shout.h $(DESTDIR)$(includedir)/shout
 
 debug:
 	$(MAKE) all CFLAGS="@DEBUG@"
