Ignore more autogenerated files, and my Project Builder directory
svn path=/trunk/libshout/; revision=4229

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,10 +1,20 @@
 Makefile
 Makefile.in
+aclocal.m4
 configure
-libtool
+config.guess
+config.h.in
+config.sub
 config.log
 config.cache
 confdefs.h
-aclocal.m4
 config.status
+depcomp
+install-sh
+libtool
+ltconfig
+ltmain.sh
+missing
+mkinstalldirs
+*.pbproj
 *.tar.gz
