Finished shout_version()
svn path=/trunk/libshout/; revision=4319

--- a/configure.in
+++ b/configure.in
@@ -5,6 +5,10 @@ LIBSHOUT_MAJOR=2
 LIBSHOUT_MINOR=0
 LIBSHOUT_MICRO=0
 
+AC_DEFINE_UNQUOTED([LIBSHOUT_MAJOR], [$LIBSHOUT_MAJOR], ["Shout library major version"])
+AC_DEFINE_UNQUOTED([LIBSHOUT_MINOR], [$LIBSHOUT_MINOR], ["Shout library minor version"])
+AC_DEFINE_UNQUOTED([LIBSHOUT_MICRO], [$LIBSHOUT_MICRO], ["Shout library patch version"])
+
 if test "$LIBSHOUT_MICRO" != 0
 then
   VERSION=$LIBSHOUT_MAJOR.$LIBSHOUT_MINOR.$LIBSHOUT_MICRO
