Include and use XIPH_PATH_OGG, XIPH_PATH_VORBIS macros. Not sure they're totally correct, but it's a start.
svn path=/trunk/libshout/; revision=4378

--- a/configure.in
+++ b/configure.in
@@ -102,6 +102,10 @@ AC_CHECK_FUNCS(nanosleep)
 AC_CHECK_FUNCS(sethostent endhostent)
 AC_CHECK_FUNCS(getnameinfo getaddrinfo inet_pton)
 
+dnl Extra dependencies
+XIPH_PATH_OGG
+XIPH_PATH_VORBIS
+
 dnl Make substitutions
 
 AC_SUBST(LIBTOOL_DEPS)
