--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,9 +11,9 @@ noinst_HEADERS = shout_private.h util.h
 libshout_la_SOURCES = shout.c util.c vorbis.c mp3.c
 
 libshout_la_LIBADD = net/libicenet.la timing/libicetiming.la avl/libiceavl.la\
-		httpp/libicehttpp.la thread/libicethread.la -logg -lvorbis
+		httpp/libicehttpp.la thread/libicethread.la $(VORBIS_LIBS) $(OGG_LIBS)
 
-INCLUDES = -I$(top_srcdir)/include/shout -I$(srcdir)/net -I$(srcdir)/timing -I$(srcdir)/avl -I$(srcdir)/thread -I$(srcdir)/httpp
+INCLUDES = -I$(top_srcdir)/include/shout -I$(srcdir)/net -I$(srcdir)/timing -I$(srcdir)/avl -I$(srcdir)/thread -I$(srcdir)/httpp $(VORBIS_CFLAGS) $(OGG_CFLAGS)
 
 debug:
 	$(MAKE) all CFLAGS="@DEBUG@"
