--- a/configure.in
+++ b/configure.in
@@ -103,6 +103,23 @@ AC_CHECK_FUNCS(sethostent endhostent)
 AC_CHECK_FUNCS(getnameinfo getaddrinfo inet_pton)
 
 dnl Extra dependencies
+
+AC_ARG_ENABLE([pthread],
+  [[  --disable-pthread       do not link with pthread even if it is available]])
+
+have_thread="no"
+if test "$enable_pthread" != "no"
+then
+  ACX_PTHREAD([
+    AC_DEFINE([USE_THREAD], 1, [Define if you want to use the thread library])
+    LIBS="$LIBS $PTHREAD_LIBS"
+    CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+    CC="$PTHREAD_CC"
+    have_thread="yes"
+    ])
+fi
+AM_CONDITIONAL([HAVE_THREAD], [test "$have_thread" == "yes"])
+
 XIPH_PATH_OGG
 XIPH_PATH_VORBIS
 
