--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -6,5 +6,6 @@ noinst_PROGRAMS = example
 
 example_SOURCES = example.c
 example_LDADD = ../src/libshout.la $(OGG_LIBS) $(VORBIS_LIBS)
+AM_CFLAGS = @XIPH_CFLAGS@
 
 INCLUDES = -I$(top_srcdir)/include
