Just enough to get shout-config up and running. The next 10% will take 90% of the effort, as usual.
svn path=/trunk/libshout/; revision=4443

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,9 @@ AUTOMAKE_OPTIONS = foreign
 SUBDIRS = include src examples
 
 EXTRA_DIST = README COPYING
+bin_SCRIPTS = shout-config
+
+shout-config.in: $(top_srcdir)/configure
 
 ##install-data-local:
 	##mkdir -p $(DESTDIR)$(includedir)/shout
