--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/shout.c)
+AM_CONFIG_HEADER(config.h)
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -40,7 +41,8 @@ if test -z "$GCC"; then
 		;;
         esac
 else
-        XIPH_CFLAGS="-Wall -ffast-math -fsigned-char -D_GNU_SOURCE"
+        XIPH_CFLAGS="-Wall -ffast-math -fsigned-char"
+        AC_DEFINE(_GNU_SOURCE, ,[Define if you have POSIX and GNU specifications])
         DEBUG="-g"
         PROFILE="-pg -g"
 fi
