reduce include file namespace clutter for libshout and the associated smaller libs.
svn path=/trunk/avl/; revision=4456

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@ AM_CFLAGS = @XIPH_CFLAGS@
 libshout_la_LIBADD = net/libicenet.la timing/libicetiming.la avl/libiceavl.la\
 		httpp/libicehttpp.la $(MAYBE_THREAD_LIB) $(VORBIS_LIBS) $(OGG_LIBS)
 
-INCLUDES = -I$(top_srcdir)/include/shout -I$(srcdir)/net -I$(srcdir)/timing -I$(srcdir)/avl -I$(srcdir)/thread -I$(srcdir)/httpp $(VORBIS_CFLAGS) $(OGG_CFLAGS)
+INCLUDES = -I$(top_srcdir)/include $(VORBIS_CFLAGS) $(OGG_CFLAGS)
 
 debug:
 	$(MAKE) all CFLAGS="@DEBUG@"
