various LIBS, CFLAGS cleanups, especially for shout-config
svn path=/trunk/libshout/; revision=4465

--- a/configure.in
+++ b/configure.in
@@ -111,14 +111,13 @@ fi
 
 XIPH_PATH_OGG
 XIPH_PATH_VORBIS
-LIBS="$LIBS $VORBIS_LIBS $OGG_LIBS"
 XIPH_CFLAGS="$XIPH_CFLAGS $VORBIS_CFLAGS $OGG_CFLAGS"
 
 # Build shout-config
 SHOUT_VERSION="$VERSION"
 SHOUT_LIBS="-lshout"
-SHOUT_LIBDEPS="$LIBS"
-SHOUT_CFLAGS="$XIPH_CFLAGS"
+SHOUT_LIBDEPS="$VORBIS_LIBS $OGG_LIBS $PTHREAD_LIBS"
+SHOUT_CFLAGS="$VORBIS_CFLAGS $OGG_CFLAGS $PTHREAD_CFLAGS"
 AC_CONFIG_LIBCONFIG_IN_STATIC
 AC_CONFIG_LIBCONFIG_IN([shout])
 
