Add m4 files to dist Put maintainer mode back
svn path=/trunk/libshout/; revision=4472

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = include src examples
 
-EXTRA_DIST = README COPYING
+EXTRA_DIST = README COPYING m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
+	m4/ogg.m4 m4/vorbis.m4
 bin_SCRIPTS = shout-config
 
 shout-config.in: $(top_srcdir)/configure
