--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.33 2003/03/18 01:15:11 brendan Exp $
+# $Id: configure.in,v 1.34 2003/03/18 01:40:39 karl Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -31,7 +31,7 @@ AM_PROG_LIBTOOL
 
 dnl Set some options based on environment
 
-AC_DEFINE(_XOPEN_SOURCE, ,[Define if you have POSIX and XPG specifications])
+AC_DEFINE(_XOPEN_SOURCE, 500, [Define if you have POSIX and XPG specifications])
 if test -z "$GCC"; then
         case $host in 
         *-*-irix*)
