--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.34 2003/03/18 01:40:39 karl Exp $
+# $Id: configure.in,v 1.35 2003/03/26 12:19:16 karl Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -31,7 +31,14 @@ AM_PROG_LIBTOOL
 
 dnl Set some options based on environment
 
-AC_DEFINE(_XOPEN_SOURCE, 500, [Define if you have POSIX and XPG specifications])
+dnl openbsd headers break when _XOPEN_SOURCE is defined but without it seems
+dnl to be fine
+case "$ac_cv_host" in
+   *openbsd*)
+   ;;
+   *) AC_DEFINE(_XOPEN_SOURCE, 500, [Define if you have POSIX and XPG specifications])
+   ;;
+esac
 if test -z "$GCC"; then
         case $host in 
         *-*-irix*)
