Generate shout.pc (pkgconfig data file for libshout). Still need:   1. detect whether pkg-config is installed, switch shout.pc on and shout-config      off if so.   2. make 1. optional   3. Create AC macro to use pkg-config if available, otherwise try shout-config,      otherwise try linking by hand (?), use it in ices.
svn path=/trunk/libshout/; revision=4863

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,9 @@ EXTRA_DIST = README COPYING m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
 	m4/ogg.m4 m4/vorbis.m4
 bin_SCRIPTS = shout-config
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = shout.pc
+
 ##install-data-local:
 	##mkdir -p $(DESTDIR)$(includedir)/shout
 	##mkdir -p $(DESTDIR)$(prefix)/doc/$(PACKAGE)-$(VERSION)/example
