Suppress shout-config installation if pkg-config is found on build system. And, vice versa.
TODO:
1. create AC macro that searches pkg-config and shout-config for shout flags.
2. make suppression/generation of *-config user-configurable

svn path=/trunk/libshout/; revision=4869

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,10 +7,13 @@ SUBDIRS = include src examples
 
 EXTRA_DIST = README COPYING m4/ac_config_libconfig_in.m4 m4/acx_pthread.m4 \
 	m4/ogg.m4 m4/vorbis.m4
-bin_SCRIPTS = shout-config
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = shout.pc
+if HAVE_PKGCONFIG
+  pkgconfigdir = $(libdir)/pkgconfig
+  pkgconfig_DATA = shout.pc
+else
+  bin_SCRIPTS = shout-config
+endif
 
 ##install-data-local:
 	##mkdir -p $(DESTDIR)$(includedir)/shout
