--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.37 2003/06/04 01:18:08 brendan Exp $
+# $Id: configure.in,v 1.38 2003/06/04 21:55:53 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -140,9 +140,21 @@ XIPH_PATH_OGG
 XIPH_PATH_VORBIS
 XIPH_CFLAGS="$XIPH_CFLAGS $VORBIS_CFLAGS $OGG_CFLAGS"
 
-dnl pkgconfig/shout-config tests. If pkgconfig is found, use it and disable
-dnl shout-config, otherwise do the opposite. TODO: make user-configurable
-AC_CHECK_PROG([PKGCONFIG], [pkg-config], [yes], [no])
+dnl pkgconfig/shout-config.
+dnl If pkgconfig is found, use it and disable shout-config, otherwise do the
+dnl opposite, unless the user overrides.
+
+AC_ARG_ENABLE([pkgconfig],
+  [  --disable-pkgconfig     disable pkgconfig data files (auto)],
+  [dopkgconfig="$enableval"], [dopkgconfig="maybe"])
+if test "$dopkgconfig" == "maybe"
+then
+  AC_CHECK_PROG([PKGCONFIG], [pkg-config], [yes], [no])
+else
+  AC_MSG_CHECKING([whether pkgconfig should be used])
+  PKGCONFIG="$dopkgconfig"
+  AC_MSG_RESULT([$PKGCONFIG])
+fi
 AM_CONDITIONAL([HAVE_PKGCONFIG], [test "$PKGCONFIG" != "no"])
 
 # Build shout-config, shout.pc
