--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.38 2003/06/04 21:55:53 brendan Exp $
+# $Id: configure.in,v 1.39 2003/06/05 13:56:58 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -147,7 +147,7 @@ dnl opposite, unless the user overrides.
 AC_ARG_ENABLE([pkgconfig],
   [  --disable-pkgconfig     disable pkgconfig data files (auto)],
   [dopkgconfig="$enableval"], [dopkgconfig="maybe"])
-if test "$dopkgconfig" == "maybe"
+if test "$dopkgconfig" = "maybe"
 then
   AC_CHECK_PROG([PKGCONFIG], [pkg-config], [yes], [no])
 else
