--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.45 2003/06/10 00:17:57 brendan Exp $
+# $Id: configure.in,v 1.46 2003/06/10 00:56:18 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -35,6 +35,8 @@ dnl openbsd headers break when _XOPEN_SOURCE is defined but without it seems
 dnl to be fine
 case "$ac_cv_host" in
    *openbsd*)
+   ;;
+   *solaris*)
    ;;
    *) AC_DEFINE(_XOPEN_SOURCE, 600, [Define if you have POSIX and XPG specifications])
    ;;
@@ -126,7 +128,8 @@ dnl Checks for library functions.
 AC_CHECK_FUNCS(nanosleep)
 AC_CHECK_FUNCS(sethostent endhostent)
 AC_SEARCH_LIBS([inet_pton], [socket],
-  [AC_DEFINE([HAVE_INET_PTON], [1], [Define if you have the inet_pton function])])
+  [AC_DEFINE([HAVE_INET_PTON], [1], [Define if you have the inet_pton function])],
+  [], [-lnsl])
 AC_CHECK_FUNCS(getnameinfo getaddrinfo inet_aton)
 
 dnl Extra dependencies
