Dirty little autoconf macro to remove duplicate compiler/linker flags. Documented at the top of the m4 file.
Modify libshout configure to clean the flags that will be stored in shout-config
and/or shout.pc

svn path=/trunk/libshout/; revision=4936

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.in,v 1.46 2003/06/10 00:56:18 brendan Exp $
+# $Id: configure.in,v 1.47 2003/06/12 16:59:43 brendan Exp $
 
 m4_define(libshout_major, 2)
 m4_define(libshout_minor, 0)
@@ -185,8 +185,8 @@ AM_CONDITIONAL([HAVE_PKGCONFIG], [test "$PKGCONFIG" != "no"])
 # Build shout-config, shout.pc
 SHOUT_VERSION="$VERSION"
 SHOUT_LIBS="-lshout"
-SHOUT_LIBDEPS="$VORBIS_LIBS $OGG_LIBS $PTHREAD_LIBS"
-SHOUT_CFLAGS="$VORBIS_CFLAGS $OGG_CFLAGS $PTHREAD_CFLAGS"
+XIPH_CLEAN_CCFLAGS([$VORBIS_LIBS $OGG_LIBS $PTHREAD_LIBS], [SHOUT_LIBDEPS])
+XIPH_CLEAN_CCFLAGS([$VORBIS_CFLAGS $OGG_CFLAGS $PTHREAD_CFLAGS], [SHOUT_CFLAGS])
 AC_SUBST(SHOUT_LIBDEPS)
 AC_SUBST(SHOUT_CFLAGS)
 AC_CONFIG_LIBCONFIG_IN_STATIC
